# aws-graviton-hackathon

./: .gitignore  README.md  docker-compose.yml
api/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
cdk/: cdk.context.json  package-lock.json  package.json
data-processing/: Dockerfile  main.py  pyproject.toml
demo-parser/: Dockerfile  README.md  index.ts  package-lock.json  package.json  tsconfig.json
faceit-scraper/: Dockerfile  README.md  docker-compose.yml  index.mjs  package-lock.json  package.json
feature-engineering/: Dockerfile  pyproject.toml
feature-engineering/feature_engineering/stats/: base.py  dynamo.py  gamesPerMap.py  main.py
feature-engineering/notebooks/: map.ipynb  model.ipynb
feature-engineering/stats/: base.py  gamesPerMap.py
feature-engineering/tests/: test_feature_engineering.py
frontend/: .umirc.ts  README.md  package-lock.json  package.json  tsconfig.json
live-matches/: README.md  index.mjs  package.json
ml/: pyproject.toml
random-stuff/: README.md
random-stuff/demo-parser/: Cargo.toml  build.rs
random-stuff/demo-parser/protos/: cstrike15_gcmessages.proto  netmessages.proto
random-stuff/demo-parser/src/: dispatcher.rs  main.rs
random-stuff/demo-parser/src/csgoprot/: README.md  cstrike15_gcmessages.rs  cstrike15_usermessages.rs  engine_gcmessages.rs  mod.rs  netmessages.rs  steammessages.rs
random-stuff/demo-parser/src/parser/: command.rs  datatable.rs  demo.rs  error.rs  frame.rs  game-event.rs  header.rs  message.rs  mod.rs  packet.rs  stringtable.rs
temp-container/: index.mjs  (+2 more)
(+167 files in other folders)
