[tool.poetry]
name = "feature-engineering"
version = "0.1.0"
description = ""
authors = ["Niek Candaele <niek@candaele.dev>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pymongo = "^3.12.0"
numpy = "^1.21.2"
python-dotenv = "^0.19.0"
ipykernel = "^6.4.1"
matplotlib = "^3.4.3"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
